@@ -40,6 +40,8 @@ enum color {
 	COLOR_STATUS_BOLD,
 	COLOR_STATUS_TIME,
 	COLOR_STATUS_ALERT,
+	COLOR_DIRECTORY,
+	COLOR_PLAYLIST,
 	COLOR_END
 };
 
