@@ -12,6 +12,7 @@ ncmpc 0.16 - not yet released
 * screen_play: repaint after the "select-playing" command
 * screen_text: start searching at window origin, not bottom
 * strfsong: support multiple values for a tag
+* screen_browser: different colors for directories and playlists
 
 
 ncmpc 0.15 - 2009-09-24
